2006-03-28  Alexis Sukrieh  <sukria@backup-manager.org>

	* backup-manager.conf.tpl:
	  + New configuration variable: BM_TARBALL_OVER_SSH 
	* doc/user-guide.sgml:
	  + Some bits about the new "tarball over ssh" thing.
	* doc/user-guide.txt:
	  + Up to date version.
	* lib/backup-methods.sh:
	  + It's now able to build archive locally (as before) or remotely
	  (through SSH); closes: #58.
	* lib/files.sh:
	  + Some TODO tags.

2006-03-24  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/actions.sh:
	  + Some more errors when failing to chown/chmod.
	* lib/backup-methods.sh:
	  + Some more errors when failing to chown/chmod.
	  + Name differently master backups, using a ".master" suffix.
	* t/confs/base.conf:
	  + added BM_REPOSITORY_USER and BM_REPOSITORY_GROUP
	* Changed all the tests to fit the new backup naming layout (.master):
	  +	t/t01-tarball.sh
	  + t/t04-tarball-blacklist.sh
	  + t/t06-bug14.sh
	  + t/t07-dar.sh
	  + t/t08-regexp.sh
	  + t/t09-tarball-incremental.sh
	  + t/t10-tarball-dar-blacklist.sh
	  + t/t12-tarball-incremental-dar.sh

2006-03-16  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/upload-methods.sh:
	* t/t02-rsync.sh:

2006-03-15  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/upload-methods.sh:
	  + applied patch from Nicolas Rennert for closing #49.
	  + make sure we don't have a trailing / at the end of the RSYNC command.

2006-03-14  Alexis Sukrieh  <sukria@backup-manager.org>

	* backup-manager:
	  + Added path for /usr/bin/7z
	* lib/backup-methods.sh:
	  + Some of the basic stuff for the 7z support.
	  + Warning, the blacklist stuff is not working!
	* lib/logger.sh:
	  + umask redirected to /dev/null for getting rid of the crappy 
	    output.
	* t/t09-tarball-incremental.sh:
	  + Never make master backups in that test.
	* t/testlib.sh:
	  + Added path for /usr/bin/7z

2006-03-12  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/files.sh:
	  + Applyied patch 21 for closing #50. 
	    (Stephen Kitt)
