@@ -357,6 +357,22 @@ BM_TARBALL_SLICESIZE="1000M"
 <p>
 Refer to the dar manpage for details about slices.
 
+<sect2 id="BM_TARBALL_EXTRA_OPTIONS"><tt>BM_TARBALL_EXTRA_OPTIONS</tt>
+
+<p>
+<em>Type: string</em>
+
+<p>
+If you want to provide extra options to "tar" or "dar" you may do so
+here. Leave blank unless you know what you are doing.
+
+<p>
+Example: to enable verbosity with tar (which would appeard in the logfiles), use this:
+
+<example>
+BM_TARBALL_EXTRA_OPTIONS="-v"
+</example>
+
 <sect2 id="BM_TARBALL_DUMPSYMLINKS"><tt>BM_TARBALL_DUMPSYMLINKS</tt>
 
 <p>
@@ -732,14 +748,14 @@ the archives on different places. The more different physical spaces you have, t
 
 <p>
 There are different upload methods, each of them behaves differently and provides particular 
-features. In &bmngr; &bmngr-version; you can use FTP, SSH or RSYNC uploads.
+features. In &bmngr; &bmngr-version; you can use FTP, SSH, RSYNC or Amazon S3 uploads.
 
 <p>In the same manner as for backup methods, you can choose to use as many 
 upload methods as you like. If you don't want to use this feature at all, just put
 the keyword <tt>none</tt> in the configuration <tt>BM_UPLOAD_METHOD</tt>.
 
 <p>
-Note that the FTP and SSH methods are dedicated to upload archives, 
+Note that the FTP, SSH and S3 methods are dedicated to upload archives, 
 using those method depends on the use of at least one backup method.
 
 <p>
@@ -932,6 +948,92 @@ the same manner as the local purge behaves (the FTP purge is not recursive thoug
 Example:
 <example>
 export BM_UPLOAD_FTP_PURGE="true"
+</example>
+
+<sect1 id="upload-s3">Amazon S3 uploads
+<sect2 id="uploads-s3-desc">Description
+<p>
+
+Amazon's new Simple Storage Service (S3) is an Internet "web service"
+that permits you to store unlimited blocks of data on their replicated
+and managed systems. See http://aws.amazon.com for more
+information. Registration is free and the rates are quite reasonable.
+
+Using the S3 upload method will permit your archives to be stored on
+Amazon's S3 service. You must allocate a "bucket" to the exclusive use
+of Backup Manager. Each of your created archives will be uploaded to
+S3 and stored within this bucket in a key name that matches the name
+of the archive.
+
+As with the other backup methods Backup Manager does not assist you in
+restoring files from archives. You must retrieve archives from S3
+using other mechanisms such as the S3Shell provided as an examle
+command line utility by Amazon.
+
+<sect2 id="BM_UPLOAD_HOSTS"><tt>BM_UPLOAD_HOSTS</tt>
+<p>
+<em>Type: string.</em>
+<p>
+This option is not required for the S3 upload method. Its value is
+ignored as there is only one Amazon S3 server.
+<p>
+Example:
+<example>
+export BM_UPLOAD_HOSTS=""
+</example>
+
+<sect2 id="BM_UPLOAD_S3_DESTINATION"><tt>BM_UPLOAD_S3_DESTINATION</tt>
+<p>
+<em>Type: string.</em>
+<p>
+This option is required for the S3 upload method. This specifies the
+bucket used to store backup data. If the bucket does not exist it will
+be created as a private bucket. This key overrides
+<tt>BM_UPLOAD_DESTINATION</tt>. Note that Amazon requires that bucket
+names be globally unique. Be creative picking one.
+<p>
+Example:
+<example>
+export BM_UPLOAD_S3_DESTINATION="my_backup_bucket"
+</example>
+
+<sect2 id="BM_UPLOAD_S3_ACCESS_KEY"><tt>BM_UPLOAD_S3_ACCESS_KEY</tt>
+<p>
+<em>Type: string.</em>
+<p>
+This option is required for the S3 upload method. After you have
+registered Amazon will provide you an access key. You must use this
+key to access your storage on S3.
+<p>
+Example:
+<example>
+export BM_UPLOAD_S3_ACCESS_KEY="a9sabkz0342dasv"
+</example>
+
+<sect2 id="BM_UPLOAD_S3_SECRET_KEY"><tt>BM_UPLOAD_S3_SECRET_KEY</tt>
+<p>
+<em>Type: string.</em>
+<p>
+This option is required for the S3 upload method. After you have
+registered Amazon will provide you a secret key. You must use this
+key to write to your storage on S3.
+<p>
+Example:
+<example>
+export BM_UPLOAD_S3_SECRET_KEY="lkj2341askj123sa"
+</example>
+
+<sect2 id="BM_UPLOAD_S3_PURGE"><tt>BM_UPLOAD_S3_PURGE</tt>
+<p>
+<em>Type: boolean, default: <tt>true</tt></em>
+<p>
+You can choose to purge deprecated archives before uploading new ones.
+This purge is done over S3 and uses the configuration key <tt>BM_ARCHIVE_TTL</tt> in 
+the same manner as the local purge behaves (the S3 purge is not recursive though).
+<p>
+Example:
+<example>
+export BM_UPLOAD_S3_PURGE="true"
 </example>
 
 <sect1 id="upload-rsync">RSYNC uploads
